--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,10 @@
   "name": "roost-client",
   "version": "0.0.0",
   "dependencies": {
-    "modernizr": "~2.6.2",
-    "jquery": "~1.9.1"
-  },
-  "devDependencies": {}
+    "jquery": "~2.0.1",
+    "q": "~0.9.4",
+    "winchan": "https://github.com/lloyd/winchan.git",
+    "webathena": "https://github.com/davidben/webathena.git",
+    "socket.io-client": "0.9.x"
+  }
 }
