--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "q": "~0.9.4",
     "winchan": "https://github.com/lloyd/winchan.git",
-    "webathena": "https://github.com/davidben/webathena.git",
-    "socket.io-client": "0.9.x"
+    "webathena": "https://github.com/davidben/webathena.git"
   }
 }
