--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-watch": "~0.4.0",
     "grunt-rev": "~0.1.0",
     "grunt-usemin": "~0.1.10",
+    "grunt-mocha": "~0.3.0",
     "grunt-open": "~0.2.0",
     "matchdep": "~0.1.1",
     "connect-livereload": "~0.2.0"
