--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "q": "~0.9.4",
     "winchan": "https://github.com/lloyd/winchan.git",
     "webathena": "https://github.com/davidben/webathena.git",
-    "angular": "~1.0.7"
+    "angular": "~1.0.7",
+    "bootstrap": "3.0.0-rc1"
   }
 }
