--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "winchan": "https://github.com/lloyd/winchan.git",
     "webathena": "https://github.com/davidben/webathena.git",
     "angular": "~1.0.7",
-    "bootstrap": "3.0.0-rc1"
+    "bootstrap": "3.0.0-rc1",
+    "MutationObservers": "https://github.com/Polymer/MutationObservers.git"
   }
 }
