--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "q": "~0.9.4",
-    "winchan": "https://github.com/lloyd/winchan.git",
+    "winchan": "https://github.com/mozilla/winchan.git",
     "webathena": "https://github.com/davidben/webathena.git",
     "angular": "~1.0.7",
     "bootstrap": "3.0.0-rc.2",
