--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular": "~1.0.7",
     "bootstrap": "3.0.1",
     "MutationObservers": "https://github.com/Polymer/MutationObservers.git#~0.0.20131025",
-    "WeakMap": "https://github.com/Polymer/WeakMap.git#~0.0.20131025"
+    "WeakMap": "https://github.com/Polymer/WeakMap.git#~0.0.20131025",
+    "cryptojs": "https://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip"
   }
 }
