Fix bower jQuery

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "bootstrap": "3.0.3",
     "MutationObservers": "https://github.com/Polymer/MutationObservers.git#~0.0.20131025",
     "WeakMap": "https://github.com/Polymer/WeakMap.git#~0.0.20131025",
-    "cryptojs": "https://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip"
+    "cryptojs": "https://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip",
+    "jquery": "2.1.0",
   }
 }
