--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,8 @@
     "WeakMap": "https://github.com/Polymer/WeakMap.git#~0.0.20131025",
     "cryptojs": "https://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip",
     "jquery": "2.1.0",
+    "underscore": "latest",
+    "backbone": "latest",
+    "handlebars": "latest"
   }
 }
