--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "grunt-contrib-connect": "~0.2.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-watch": "~0.4.0",
+    "grunt-contrib-coffee": "latest",
+    "grunt-contrib-sass": "latest",
     "grunt-rev": "~0.1.0",
     "grunt-usemin": "~0.1.10",
     "grunt-mocha": "~0.3.0",
