--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-watch": "~0.4.0",
     "grunt-contrib-coffee": "latest",
+    "grunt-contrib-handlebars": "latest",
     "grunt-contrib-sass": "latest",
     "grunt-rev": "~0.1.0",
     "grunt-usemin": "~0.1.10",
