--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "jquery": "2.1.0",
     "underscore": "latest",
     "backbone": "latest",
-    "handlebars": "latest"
+    "handlebars": "latest",
+    "moment": "latest"
   }
 }
