Styling, compose, and bottom jump
Added a lot of new styling and added bottom jump button.

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "underscore": "latest",
     "backbone": "latest",
     "handlebars": "latest",
-    "moment": "latest"
+    "moment": "latest",
+    "font-awesome": "latest"
   }
 }
