Split settings, bug fixes, etc

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "handlebars": "latest",
     "moment": "latest",
     "font-awesome": "latest",
-    "mousetrap": "latest"
+    "mousetrap": "latest",
+    "jquery-linkify": "latest"
   }
 }
