--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,12 @@
     "WeakMap": "https://github.com/Polymer/WeakMap.git#~0.0.20131025",
     "cryptojs": "https://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip",
     "jquery": "2.1.0",
-    "underscore": "latest",
-    "backbone": "latest",
-    "handlebars": "latest",
-    "moment": "latest",
-    "font-awesome": "latest",
-    "mousetrap": "latest",
+    "underscore": "1.6.0",
+    "backbone": "1.1.2",
+    "handlebars": "1.3.0",
+    "moment": "2.6.0",
+    "font-awesome": "4.1.0",
+    "mousetrap": "1.4.6",
     "jquery-linkify": "latest"
   }
 }
