--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "moment": "2.6.0",
     "font-awesome": "4.1.0",
     "mousetrap": "1.4.6",
-    "jquery-linkify": "latest"
+    "jquery-linkify": "latest",
+    "typeahead.js": "0.10.2"
   }
 }
