Use vex.js for the hotkeys modal. It's cleaner.

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "font-awesome": "4.1.0",
     "mousetrap": "1.4.6",
     "jquery-linkify": "latest",
-    "typeahead.js": "0.10.2"
+    "typeahead.js": "0.10.2",
+    "vex": "2.1.1"
   }
 }
