--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,6 @@
     "jquery-linkify": "latest",
     "typeahead.js": "0.10.2",
     "vex": "2.1.1",
-    "fastclick": "1.0.2"
+    "hammerjs": "~2.0.2",
   }
 }
